# EZMPI

./: CMakeLists.txt  EZMPIConfig.cmake.in  README.md  abort.F90  ezmpi.f90  ezmpi_bcast.F90  ezmpi_bcast.f90  ezmpi_recv.F90  ezmpi_recv.f90  ezmpi_send.F90  ezmpi_send.f90  ezmpi_ssend.f90
